added logo to the nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" media="screen,projection" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" media="screen,projection" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +43,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <img class="left" alt="Rose Logo" src="img/roselogo.png" title="Rose Logo">
+                <a class="navbar-brand" href="#page-top">Rose Koenings</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,13 +53,13 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll fontSize">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll fontSize">
                         <a href="#about">About</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll fontSize">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -72,7 +74,11 @@
         <div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div id="bannerPhoto" class="img img-responsive"></div>
+                    <div id="bannerPhoto" class="img img-responsive">
+                          <h1 class="center grow">Grow</h1>
+                          <br>
+                          <h5 class="center gardenOfYourMind">Water the garden of your mind</h5>
+                    </div>
                     <div class="intro-text">
                         <span class="name">Start Bootstrap</span>
                         <hr class="star-light">
