--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Rose Koenings</title>
+    <link rel="icon" href="img/roseIco.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +45,7 @@
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
                 <img class="left" alt="Rose Logo" src="img/roselogo.png" title="Rose Logo">
-                <a class="navbar-brand" href="#page-top">Rose Koenings</a>
+                <a class="navbar-brand" id="roseKoenings" href="#page-top">Rose Koenings</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,9 +76,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div id="bannerPhoto" class="img img-responsive">
-                          <h1 class="center grow">Grow</h1>
+                          <h1 class="center gardenOfYourMind">Water the garden of your mind</h1>
                           <br>
-                          <h5 class="center gardenOfYourMind">Water the garden of your mind</h5>
+<!--                           <h5 class="center gardenOfYourMind">Water the garden of your mind</h5> -->
                     </div>
                     <div class="intro-text">
                         <span class="name">Start Bootstrap</span>
