created hr with rose logo for intro section

--- a/index.html
+++ b/index.html
@@ -81,8 +81,13 @@
 <!--                           <h5 class="center gardenOfYourMind">Water the garden of your mind</h5> -->
                     </div>
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
-                        <hr class="star-light">
+                        <span class="name">Rose Koenings</span>
+                        <div class="hrContainer">
+<!--                             <div class="hrLeftStyles"></div> -->
+                            <img src="img/roselogo.png" class="roseHr roseLogo">
+                            <div class="hrStyles">
+                        </div>
+                        </div>
                         <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
                     </div>
                 </div>
