added rose and hr to white background of portfolio section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <!--                           <h5 class="center gardenOfYourMind">Water the garden of your mind</h5> -->
                     </div>
                     <div class="intro-text">
-                        <span class="name">Rose Koenings</span>
+                        <span class="name">Rose</span>
                         <div class="hrContainer">
 <!--                             <div class="hrLeftStyles"></div> -->
                             <img src="img/roselogo.png" class="roseHr roseLogo">
@@ -101,7 +101,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
-                    <hr class="star-primary">
+                     <div class="hrContainer">
+<!--                             <div class="hrLeftStyles"></div> -->
+                            <img src="img/roselogo.png" class="roseHr roseLogoWhite">
+                            <div class="hrBlueStyles">
+                        </div>
+                        </div>
                 </div>
             </div>
             <div class="row">
@@ -174,8 +179,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
+                    <div class="AboutSpace">
+                        <h2>About</h2>
+                        <div class="hrContainer">
+                            <img src="img/roselogo.png" class="roseHr roseLogoAbout">
+                            <div class="hrStyles">
+                        </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -187,7 +198,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
             </div>
