added website links

--- a/index.html
+++ b/index.html
@@ -282,6 +282,13 @@
                             <hr class="star-primary">
                             <img src="img/bigMyGuestBook.png" class="img-responsive img-centered" alt="">
                             <p class="captionAlignLeft">My Guest Book makes responding to a wedding instantaneous and organization accessible and clean.  I used HTML, CSS, and AngularJS. Enter the example names in the input boxes to navigate to the next page of the site.</p>
+                            <ul class="list-inline item-details">
+                                <li>
+                                    <strong>
+                                        <a href="http://myguestbook.rosekoenings.com">Website: My Guest Book</a>
+                                    </strong>
+                                </li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -305,6 +312,13 @@
                             <hr class="star-primary">
                             <img src="img/bigFeather.png" class="img-responsive img-centered" alt="">
                             <p class="captionAlignLeft">Song Bird is an app I made to test out my knowledge of AngularJS, pagination and the itunes API. You can search for any song in itunes and view five results on each page.  You can add any song you want to your playlist below.  If you change your mind later you can remove any song you'd like from your playlist.  You cannot add duplicate songs to your playlist.</p>
+                            <ul class="list-inline item-details">
+                                <li>
+                                    <strong>
+                                        <a href="http://songbird.rosekoenings.com">Website: Song Bird</a>
+                                    </strong>
+                                </li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -328,6 +342,13 @@
                             <hr class="star-primary">
                             <img src="img/bigSquareOneCreative.png" class="img-responsive img-centered" alt="">
                             <p class="captionAlignLeft">Square One Creative was one of my first collaborative projects.  Jen Ensslin and I were first learning HTML, CSS and how to work with Bootstrap when we came up with a fictitious company and worked together to design a site we both loved. I enjoyed working with her immensely.</p>
+                            <ul class="list-inline item-details">
+                                <li>
+                                    <strong>
+                                        <a href="http://squareonecreative.rosekoenings.com">Website: Square One Creative</a>
+                                    </strong>
+                                </li>
+                            </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
