made a media query for the background photo for larger computers

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     <header>
         <div class="row">
             <div id="bannerPhoto" class="img img-responsive">
-                  <h1 class="center gardenOfYourMind"> Develop. Grow. Design</h1>
-                  <br>
+                <img src="img/rose.jpg" id="bannerImg">
+                <h1 class="center gardenOfYourMind"> Develop. Grow. Design</h1>
+                <br>
             </div>
             <div class="intro-text">
                 <span class="name">Rose</span>
