--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row portfolioPaddingTop">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
