moved text over portfolio items

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus">  Development + Design</i>
+                                <i class="fa fa-search-plus"></i> Development + Design
                             </div>
                         </div>
                         <img src="img/bigMyGuestBook.png" class="img-responsive" alt="">
@@ -92,7 +92,7 @@
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-1x">    Development + Design</i>
+                                <i class="fa fa-search-plus fa-1x"></i> Development + Design
                             </div>
                         </div>
                         <img src="img/bigFeather.png" class="img-responsive" alt="">
@@ -102,7 +102,7 @@
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus">  Development + Collaboration</i>
+                                <i class="fa fa-search-plus"></i> Development + Collaboration
                             </div>
                         </div>
                         <img src="img/bigSquareOneCreative.png" class="img-responsive" alt="">
@@ -112,7 +112,7 @@
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus"> Design</i>
+                                <i class="fa fa-search-plus"></i> Design
                             </div>
                         </div>
                         <img src="img/bigSprouts.png" class="img-responsive" alt="">
@@ -122,7 +122,7 @@
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus"> Design</i>
+                                <i class="fa fa-search-plus"></i> Design
                             </div>
                         </div>
                         <img src="img/bigSushi.png" class="img-responsive" alt="">
@@ -132,7 +132,7 @@
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus"> Design</i>
+                                <i class="fa fa-search-plus"></i> Design
                             </div>
                         </div>
                         <img src="img/bigWeinie.png" class="img-responsive" alt="">
@@ -142,7 +142,7 @@
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus"> Design</i>
+                                <i class="fa fa-search-plus"></i> Design
                             </div>
                         </div>
                         <img src="img/bigBird.png" class="img-responsive" alt="">
@@ -152,7 +152,7 @@
                     <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus"> Design</i>
+                                <i class="fa fa-search-plus"></i> Design
                             </div>
                         </div>
                         <img src="img/bigOrigamiYoga.png" class="img-responsive" alt="">
@@ -162,7 +162,7 @@
                     <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus"> Design</i>
+                                <i class="fa fa-search-plus"></i> Design
                             </div>
                         </div>
                         <img src="img/bigWhales.png" class="img-responsive" alt="">
