added target blanks for website links

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
-                                        <a href="http://myguestbook.rosekoenings.com">Website: My Guest Book</a>
+                                        <a href="http://myguestbook.rosekoenings.com" target="_blank">Website: My Guest Book</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -312,7 +312,7 @@
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
-                                        <a href="http://songbird.rosekoenings.com">Website: Song Bird</a>
+                                        <a href="http://songbird.rosekoenings.com" target="_blank">Website: Song Bird</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -342,7 +342,7 @@
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong>
-                                        <a href="http://squareonecreative.rosekoenings.com">Website: Square One Creative</a>
+                                        <a href="http://squareonecreative.rosekoenings.com" target="_blank">Website: Square One Creative</a>
                                     </strong>
                                 </li>
                             </ul>
