--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
                                 <a href="mailto:rnkings.05@gmail.com" class="btn-social btn-outline"><i class="fa fa-envelope-o"></i></a>
                             </li>
                             <li>
+                                <a href="img/roseKoeningsResume.pdf" class="btn-social btn-outline"><i class="fa fa-file-text-o"></i></a>
+                            </li>
+                            <li>
                                 <a href="https://www.linkedin.com/in/rose-koenings-7310aab6/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
