--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                     <div class="hrStyles">
                 </div>
                 </div>
-                <span class="skills">Web Developer - Web Designer</span>
+                <span class="skills">Web Developer</span>
             </div>
         </div>
     </header>
@@ -187,7 +187,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Rose Koenings is a developer and designer that started out with a B.A. in English from UW-Whitewater.  She wrote technical documentation for luxury planes and medical equipment. In her free time she participated in hackathons. Her team went on to win 2nd place for an anxiety app and 3rd place for a game. She found great joy in being able to bring her ideas to life and she used that growing passion as the driving force behind teaching herself HTML, CSS, JavaScript and to continue learning. Soon she was able to make her first professional baby step into code working with databases.<br><br></p>
+                    <p>Rose is a web developer that started out with a B.A. in English from UW-Whitewater. She wrote technical documentation for luxury planes and medical equipment. In her free time she participated in hackathons. Her team went on to win 2nd place for an anxiety app and 3rd place for a game. She found great joy in being able to bring her ideas to life and she used that growing passion as the driving force behind teaching herself HTML, CSS, JavaScript and to continue learning. Soon she was able to make her first professional baby step into code working with databases and finally her first front-end development position.<br><br></p>
                 </div>
                 <div class="col-lg-4">
                     <p>Her writing skills pair well with her keen eye for design and commitment to producing streamlined effective web applications. In her experiences teaching English in Japan she has found camaraderie, communication and creative problem solving to be a priority in life as well as in the office. She's looking for an opportunity to join a team where she can use her skill set in a collaborative fun loving environment. You can find her in the dairy state looking for the next best Thai restaurant.</p>
@@ -255,7 +255,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy;  Rose Koenings 2017
+                        Copyright &copy;  Rose Koenings 2018
                     </div>
                 </div>
             </div>
